--- a/applications/vanilla/design/vanilla.css
+++ b/applications/vanilla/design/vanilla.css
@@ -189,6 +189,7 @@ ul#Menu {
 #Content {
    float: left;
    width: 680px;
+   margin: 0 0 40px;
 }
 /* Progress Bars */
 .Loading {
@@ -974,5 +975,31 @@ a.Cancel {
 #Panel ul.Discussions {
    border: 0;
 }
+
+/* Powered by Vanilla Footer */
+
+#Foot {
+   clear: both;
+   border-top: 1px solid #E9F9FF;
+   border-bottom: 1px solid #E9F9FF;
+   background: #F0FBFF;
+   padding: 16px 0;
+   margin: 0 auto;
+}
+#Foot div {
+   width: 940px;
+   margin: 0 auto;
+   text-align: right;
+   color: #CAF0FE;
+}
+#Foot span {
+   display: none;
+}
+#Foot a {
+   background: url('logo.vanilla.png') center center no-repeat;
+   padding: 8px 40px;
+   margin: 0 0 0 10px;
+}
+
 
 /* End Typography */
