--- a/applications/garden/design/popup.css
+++ b/applications/garden/design/popup.css
@@ -1,20 +1,20 @@
 div.Popup .Loading {
    width: 500px;
 }
-/*
 div.Overlay {
   position: absolute;
-  top: 0%;
-  left: 0%;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000;
+/*
   z-index:1001;
+  background-color: #000;
   -moz-opacity: 0.6;
   opacity:.60;
   filter: alpha(opacity=60);
-}
 */
+}
 div.Popup {
   position: absolute;
   width: 100%;
